# sapienza_c_hm2

./: .gitignore  CMakeLists.txt  README.md  client.nix  flake.nix  server.nix
.github/workflows/: ci.yaml
src/client/: args.c  args.h  client.c  client.h  decrypt.c  decrypt.h  encryption.c  encryption.h  get_data.c  get_data.h  get_text.c  get_text.h  read_file.c  read_file.h  socket.c  socket.h
src/common/: ack.h  convert_types.c  message.c  message.h  signals.c  signals.h  socket.c  socket.h  thread_pool.c  thread_pool.h  xor.c
src/server/: args.c  args.h  decrypt.c  decrypt.h  server.c  socket.c  socket.h
tests/: client_parse_args.c  encript_and_decript.c  server_parse_args.c  test.txt  thread_pool.c  thread_pool_nb.c
